--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
+            
             "scripts": []
           },
           "configurations": {
